# code-brain

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-03-01-cognee-deep-integration-design.md  2026-03-01-cognee-deep-integration-plan.md  2026-03-01-future-roadmap.md  2026-03-01-plug-n-play-design.md  2026-03-01-plug-n-play-implementation.md
src/code_brain/: __init__.py  cli.py  config.py  mcp_server.py  models.py
src/code_brain/formatters/: json_formatter.py  text_formatter.py
src/code_brain/graph/: builder.py  pagerank.py  queries.py
src/code_brain/ingestion/: ast_index.py  cognee_adapter.py  doc_ingester.py  git_analyzer.py
src/code_brain/query/: budgeter.py  hybrid.py  router.py  semantic.py  structural.py
tests/fixtures/sample_project/src/api/: handler.ts
tests/fixtures/sample_project/src/models/: user.py
tests/fixtures/sample_project/src/repos/: user_repo.py
tests/fixtures/sample_project/src/services/: auth.py
tests/unit/: test_ast_index_reader.py  test_budgeter.py  test_cli.py  test_cognee_adapter.py  test_config.py  test_formatters.py  test_git_analyzer.py  test_graph_builder.py  test_graph_queries.py  test_hybrid_queries.py  test_mcp_server.py  test_models.py  test_pagerank.py  test_router.py  test_semantic_queries.py  test_structural_queries.py
