[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-brain"
version = "0.1.0"
description = "Unified code intelligence for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "networkx>=3.2",
    "cognee>=0.1.30",
    "mcp>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
code-brain = "code_brain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
